<resources>
    <!-- App Strings -->
    <string name="app_name">Puzzle Me This</string>
    <string name="preference_file">puzzle_me_this_pref</string>
    <string name="no_image_key">NO_IMAGE_KEY</string>
    <string name="no_image_uri_key">NO_IMAGE_URI_KEY</string>

    <!-- Category Fragment -->
    <string name="hello_category_fragment">This is the category fragment</string>

    <!-- Mix n Match Fragment -->
    <string name="hello_mix_and_match_fragment">This is the Mix And Match fragment</string>
    <string name="category_to_pass">Enter Category</string>
    <string name="button_send">Go</string>
    <string name="title_activity_category_builder">"Category Selection: "</string>
    <string name="activity_image_selected">activityImageSelected</string>

    <!-- Menu items -->
    <string name="menu_title_add_sound">Add Sound from Media</string>
    <string name="menu_title_replace_sound">Replace Sound with Media</string>
    <string name="menu_title_add_image">Add Image</string>
    <string name="menu_title_replace_image">Replace Image</string>
    <string name="menu_title_remove_button">Remove Button</string>
    <string name="menu_title_up_vote">Up Vote</string>
    <string name="menu_title_down_vote">Down Vote</string>
    <string name="menu_title_record_sound">Record Sound</string>
    <string name="menu_title_replace_recording">Replace Sound with Recording</string>
    <string name="menu_title_preview_sound">Preview Sound</string>
    <string name="title_activity_show_selection">We have a WINNER!</string>
    <string name="title_activity_choose_preferences">Select Your Preferences</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_select_scr_orient">Screen Rotation Options</string>
    <string-array name="pref_scr_orient_titles">
        <item>Landscape only</item>
        <item>Portrait only</item>
        <item>Allow Rotation</item>
    </string-array>
    <string-array name="pref_scr_orient_values">
        <item>LANDSCAPE</item>
        <item>PORTRAIT</item>
        <item>BOTH</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Puzzle Data</string>

    <string name="pref_title_num_images">Default Number of Images</string>
    <string-array name="pref_num_image_titles">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="pref_num_image_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="pref_title_audio_quality">Audio Recording Quality</string>
    <string-array name="pref_audio_quality_titles">
        <item>Low (requires least space)</item>
        <item>Medium (recommended)</item>
        <item>High (requires most space)</item>
    </string-array>
    <string-array name="pref_audio_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="select_categories_to_delete">Select Categories to Delete</string>

    <string-array name="empty_array"></string-array>
    <string name="bulk_delete_title">Delete Unused Categories</string>
    <string name="pref_dialog_message_reset_factory">Restoring factory defaults cannot be undone.  All categories, images and user preferences will be lost.</string>
    <string name="pref_dialog_title_reset_factory">Reset to Factory Defaults</string>
    <string name="pref_dialog_neg_reset_factory">Cancel</string>
    <string name="pref_dialog_pos_reset_factory">I understand, continue</string>
    <string name="pref_title_reset_factory">Reset to Factory Settings</string>
    <string name="pref_summary_reset_factory">Will require passcode if admin restrictions on</string>
    <string name="pref_header_admin">Admin Settings</string>
    <string name="pref_title_admin_restrictions">Admin Restrictions</string>
    <string name="pref_summary_admin_restrictions">Create passcode to secure data</string>
    <string name="title_activity_passcode">" "</string>
    <string name="passcode_success">passcode_set_result</string>
    <string name="pref_summary_admin_set">Passcode set</string>
    <string name="passcode_action">passcode_action</string>
    <string name="enter_passcode">Enter your Passcode</string>
    <string name="reenter_passcode">Verify your Passcode</string>
    <string name="passcodes_dont_match">Passcodes do not match</string>
    <string name="passcode_doesnt_match">Passcode does not match saved passcode</string>
    <string name="select_up_to_six"><![CDATA[Mix & Match up to 6]]></string>
    <string name="present_options">Present Options</string>
    <string name="title_activity_present_options">"Choose Option"</string>
    <string name="options_to_present">options_to_present</string>

    <array name="colorNumberList">
        <item>@color/Brown</item>
        <item>@color/CadetBlue</item>
        <item>@color/Chocolate</item>
        <item>@color/CornflowerBlue</item>
        <item>@color/DarkGoldenrod</item>
        <item>@color/DarkSeaGreen</item>
        <item>@color/DarkSlateBlue</item>
        <item>@color/Goldenrod</item>
        <item>@color/IndianRed</item>
        <item>@color/LimeGreen</item>
        <item>@color/MediumOrchid</item>
        <item>@color/MediumPurple</item>
        <item>@color/MediumVioletRed</item>
        <item>@color/OldGold</item>
        <item>@color/Olive</item>
        <item>@color/Orange</item>
        <item>@color/OrangeRed</item>
        <item>@color/RoyalBlue</item>
        <item>@color/SeaGreen</item>
        <item>@color/Sienna</item>
        <item>@color/SlateBlue</item>
        <item>@color/SteelBlue</item>
        <item>@color/Teal</item>
        <item>@color/Tomato</item>
        <item>@color/Violet</item>
        <item>@color/YellowGreen</item>
    </array>

</resources>
